--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "@headlessui/react": "^2.0.3",
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
     "@nextui-org/input": "2.1.16",
@@ -29,6 +31,8 @@
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.16.4",
+    "heroicons": "^2.1.3",
+    "html-react-parser": "^5.1.12",
     "intl-messageformat": "^10.5.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
